<?xml version="1.0"?>
<package format="2">
  <name>uwb_uvdar_fusion</name>
  <version>0.0.1</version>
  <description>Fusion of UWB ranges and UVDAR detections</description>

  <maintainer email="radomir@todo.todo">radomir</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>uvdar_core</depend>
  <depend>eigen</depend>
  <depend>roslib</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
